--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 google.sheet.id=1GcHgWyrOwu6pjz48uprIUgqDSRYFntIZ24bOHkHU0yc
 google.sheet.port=8888
 credential=/credentials.json
+server.port=${PORT:8080}
